@@ -2,6 +2,8 @@ package com.hanshunping.jvm;
 
 import java.util.Random;
 
+
+//-Xms2m -Xmx8m -XX:+PrintGCDetails -XX:+HeapDumpOnOutOfMemoryError
 public class OOMDemo {
     public static void main(String[] args) {
         StringBuilder stringBuilder = new StringBuilder("");
